added more things

--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
 </head>
 
 <body>
+  <header>
+
+  </header>
   <main>
-    <h1 class="text-3xl font-bold underline text-clifford secondary">
-      Hello world!
-    </h1>
+
   </main>
+  <footer>
+    
+  </footer>
   <script src="https://unpkg.com/petite-vue" defer init></script>
 </body>
 
