--- a/index.html
+++ b/index.html
@@ -6,33 +6,261 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            clifford: '#da373d',
-            primary: '#4b8688',
-            secondary: "#564440",
-            "secondary-supplement": "#af633f",
-            "primary-supplement": '#85d0ce',
-            "primary-from": "#19454b",
-            "primary-to": "#85d0ce",
-          }
-        }
-      }
-    }
-  </script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Mulish:wght@300;700&display=swap&family=Nunito:wght@700" rel="stylesheet">
 </head>
 
 <body>
   <header>
 
   </header>
-  <main>
 
+  <main>
+    <section id="hero-bg">
+      <div class="container mx-auto">
+        <a href=""class="hero--cta">
+          <span>
+            Doe nú je inkopen voor Ramadan
+          </span>
+        </a>
+      </div>
+    </section>
+
+    <section class="container mx-auto">
+      <h2 class="text-center h2-primary">Aanbiedingen van deze maand</h2>
+      <div class="row flex flex-wrap product-listing">
+        <div class="col-2">
+          <article class="product-card">
+            <img src="./assets/product-image-baloons.png" alt="">
+            <h3 class="product-card--title">Hier nog een titel van een ander product</h3>
+            <div class="product-card--rating">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star.svg" alt="">
+              <a href="">
+                <p class="comments">(4) MORGEN IN HUIS</p>
+              </a>
+            </div>
+            <div class="product-card--bottom">
+              <p class="price">3,99</p>
+              <p class="old-price">8,99</p>
+              <a href="">
+                <button>
+                  <img src="./assets/add-to-cart.svg" alt="">
+                </button>
+              </a>
+            </div>
+          </article>
+        </div>
+        <div class="col-2">
+          <article class="product-card">
+            <img src="./assets/product-image-plates-i-guesss.png" alt="">
+            <h3 class="product-card--title">Hier nog een titel van een ander product</h3>
+            <div class="product-card--rating">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star.svg" alt="">
+              <a href="">
+                <p class="comments">(4) MORGEN IN HUIS</p>
+              </a>
+            </div>
+            <div class="product-card--bottom">
+              <p class="price">3,99</p>
+              <p class="old-price">8,99</p>
+              <a href="">
+                <button>
+                  <img src="./assets/add-to-cart.svg" alt="">
+                </button>
+              </a>
+            </div>
+          </article>
+        </div>
+        <div class="col-2">
+          <article class="product-card">
+            <img src="./assets/product-image-letters.png" alt="">
+            <h3 class="product-card--title">Hier nog een titel van een ander product</h3>
+            <div class="product-card--rating">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star.svg" alt="">
+              <a href="">
+                <p class="comments">(4) MORGEN IN HUIS</p>
+              </a>
+            </div>
+            <div class="product-card--bottom">
+              <p class="price">3,99</p>
+              <p class="old-price">8,99</p>
+              <a href="">
+                <button>
+                  <img src="./assets/add-to-cart.svg" alt="">
+                </button>
+              </a>
+            </div>
+          </article>
+        </div>
+        <div class="col-2">
+          <article class="product-card">
+            <img src="./assets/product-image-book.png" alt="">
+            <h3 class="product-card--title">Hier nog een titel van een ander product</h3>
+            <div class="product-card--rating">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star.svg" alt="">
+              <a href="">
+                <p class="comments">(4) MORGEN IN HUIS</p>
+              </a>
+            </div>
+            <div class="product-card--bottom">
+              <p class="price">3,99</p>
+              <p class="old-price">8,99</p>
+              <a href="">
+                <button>
+                  <img src="./assets/add-to-cart.svg" alt="">
+                </button>
+              </a>
+            </div>
+          </article>
+        </div>
+        <div class="col-2">
+          <article class="product-card">
+            <img src="./assets/product-image-eating-tools.png" alt="">
+            <h3 class="product-card--title">Hier nog een titel van een ander product</h3>
+            <div class="product-card--rating">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star.svg" alt="">
+              <a href="">
+                <p class="comments">(4) MORGEN IN HUIS</p>
+              </a>
+            </div>
+            <div class="product-card--bottom">
+              <p class="price">3,99</p>
+              <p class="old-price">8,99</p>
+              <a href="">
+                <button>
+                  <img src="./assets/add-to-cart.svg" alt="">
+                </button>
+              </a>
+            </div>
+          </article>
+        </div>
+        <div class="col-2">
+          <article class="product-card">
+            <img src="./assets/product-image-baloons.png" alt="">
+            <h3 class="product-card--title">Hier nog een titel van een ander product</h3>
+            <div class="product-card--rating">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star.svg" alt="">
+              <a href="">
+                <p class="comments">(4) MORGEN IN HUIS</p>
+              </a>
+            </div>
+            <div class="product-card--bottom">
+              <p class="price">3,99</p>
+              <p class="old-price">8,99</p>
+              <a href="">
+                <button>
+                  <img src="./assets/add-to-cart.svg" alt="">
+                </button>
+              </a>
+            </div>
+          </article>
+        </div>
+        <div class="col-2">
+          <article class="product-card">
+            <img src="./assets/product-image-plates-i-guesss.png" alt="">
+            <h3 class="product-card--title">Hier nog een titel van een ander product</h3>
+            <div class="product-card--rating">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star.svg" alt="">
+              <a href="">
+                <p class="comments">(4) MORGEN IN HUIS</p>
+              </a>
+            </div>
+            <div class="product-card--bottom">
+              <p class="price">3,99</p>
+              <p class="old-price">8,99</p>
+              <a href="">
+                <button>
+                  <img src="./assets/add-to-cart.svg" alt="">
+                </button>
+              </a>
+            </div>
+          </article>
+        </div>
+        <div class="col-2">
+          <article class="product-card">
+            <img src="./assets/product-image-letters.png" alt="">
+            <h3 class="product-card--title">Hier nog een titel van een ander product</h3>
+            <div class="product-card--rating">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star.svg" alt="">
+              <a href="">
+                <p class="comments">(4) MORGEN IN HUIS</p>
+              </a>
+            </div>
+            <div class="product-card--bottom">
+              <p class="price">3,99</p>
+              <p class="old-price">8,99</p>
+              <a href="">
+                <button>
+                  <img src="./assets/add-to-cart.svg" alt="">
+                </button>
+              </a>
+            </div>
+          </article>
+        </div>
+        <div class="col-2">
+          <article class="product-card">
+            <img src="./assets/product-image-book.png" alt="">
+            <h3 class="product-card--title">Hier nog een titel van een ander product</h3>
+            <div class="product-card--rating">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star-full.svg" alt="">
+              <img src="/assets/rating-star.svg" alt="">
+              <a href="">
+                <p class="comments">(4) MORGEN IN HUIS</p>
+              </a>
+            </div>
+            <div class="product-card--bottom">
+              <p class="price">3,99</p>
+              <p class="old-price">8,99</p>
+              <a href="">
+                <button>
+                  <img src="./assets/add-to-cart.svg" alt="">
+                </button>
+              </a>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
   </main>
+
   <footer>
     
   </footer>
