--- a/index.html
+++ b/index.html
@@ -259,6 +259,45 @@
         </div>
       </div>
     </section>
+
+    <section id="categories-separator">
+      <div class="container mx-auto">
+        <h2 class="text-center">Meest bezochte categorieën</h2>
+        
+        <div class="row flex">
+          <div class="col-3">
+            <article class="category-card">
+              <img src="/assets/ramadan.png" alt="">
+              <span>Ramadan</span>
+            </article>
+          </div>
+          <div class="col-3">
+            <article class="category-card">
+              <img src="/assets/huwelijk.png" alt="">
+              <span>Huwelijk</span>
+            </article>
+          </div>
+          <div class="col-3">
+            <article class="category-card">
+              <img src="/assets/kids.png" alt="">
+              <span>Kids</span>
+            </article>
+          </div>
+          <div class="col-3">
+            <article class="category-card">
+              <img src="/assets/cadeaus.png" alt="">
+              <span>Cadeau's</span>
+            </article>
+          </div>
+          <div class="col-3">
+            <article class="category-card">
+              <img src="/assets/wonen.png" alt="">
+              <span>Wonen</span>
+            </article>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer>
