desktop main page done

--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
       </div>
     </section>
 
+    <img src="./assets/categories-separator-oceans.svg" alt="" class="w-100 mt-10">
     <section id="categories-separator">
       <div class="container mx-auto max-w-8xl">
         <h2 class="text-center">Meest bezochte categorieën</h2>
@@ -319,6 +320,7 @@
         </div>
       </div>
     </section>
+    <img src="./assets/categories-separator-oceans.svg" alt="" class="w-100 rotate-180">
 
     <section class="container mx-auto max-w-8xl mt-12 mb-12">
       <h2 class="text-center h2-primary">
@@ -453,6 +455,7 @@
       </div>
     </section>
 
+    <img src="./assets/shipping-benefits-oceans.svg" alt="" class="object-none w-100">
     <section id="shipping-benefits">
       <div class="container justify-between	flex row mx-auto max-w-8xl">
         <article class="benefits-card">
@@ -480,6 +483,7 @@
         </article>
       </div>
     </section>
+    <img src="./assets/shipping-benefits-oceans.svg" alt="" class="object-none w-100 rotate-180">
 
     <section class="container mx-auto max-w-8xl mt-12 mb-12">
       <h2 class="text-center h2-primary">
@@ -616,7 +620,7 @@
   </main>
 
   <section id="pre-footer-socials" class="relative">
-    <img src="/assets/pre-footer-bkg.png" alt="">
+    <img src="/assets/pre-footer-bkg.png" alt="" class="w-100">
     <div id="pre-footer-socials--wrapper">
       <div class="container mx-auto text-center flex flex-wrap justify-center">
         <h3 class="mr-12">Volg ons op onze socials</h3>
@@ -672,7 +676,7 @@
         </article>
       </div>
 
-      <div class="row flex pb-10">
+      <div class="row flex pb-136px">
         <article class="col-12" id="newsletter-article">
           <form id="newsletter" action="" class="relative">
             <input type="text" placeholder="E-mailadres">
@@ -682,6 +686,7 @@
       </div>
     </section>
   </footer>
+
   <script src="https://unpkg.com/petite-vue" defer init></script>
 </body>
 
