--- a/index.html
+++ b/index.html
@@ -41,14 +41,19 @@
     <section class="
       xl:mb-[47px] xl:h-[400px] xl:bg-cover
       lg:h-[285px] md:bg-bottom 
-      md:bg-[url('./assets/hero-banner.webp')] md:h-[200px]
+      md:h-[200px]
+      bg-[url('./assets/hero-banner.webp')] bg-bottom
     ">
       <div class="container mx-auto max-w-8xl relative">
         <a href="" class="
-          hero--cta
-          lg:absolute lg:top-[24px] lg:left-[375px] lg:items-center lg:content-center lg:flex lg:bg-[#ffffff99] lg:rounded-full lg:h-[245px] lg:w-[245px]
+          xl:top-[24px] xl:left-[375px]
+          lg:absolute lg:top-[24px] lg:left-[205px] lg:items-center lg:content-center lg:flex lg:bg-[#ffffff99] lg:rounded-full lg:h-[245px] lg:w-[245px] lg:pt-0
+          md:block md:text-center md:pt-[60px]
         ">
-          <span class="font-extrabold text-[30px] leading-[50px] text-center font-nunito text-[primary]">
+          <span class="
+            text-[20px] block pt-8 pb-8
+            font-extrabold md:text-[30px] leading-[50px] text-center font-nunito text-primary"
+          >
             Doe nú je inkopen voor Ramadan
           </span>
         </a>
