footer responsiveness added

--- a/index.html
+++ b/index.html
@@ -1046,10 +1046,10 @@
     </section>
   </main>
 
-  <section id="pre-footer-socials" class="relative h-[40px]">
+  <section class="relative h-[40px]">
     <img src="/assets/pre-footer-bkg.png" alt="" class="w-full h-full">
     
-    <div id="pre-footer-socials--wrapper" class="absolute top-[-15px] sm:top-[4px] w-full">
+    <div class="absolute top-[-15px] sm:top-[4px] w-full">
       <div class="container mx-auto text-center flex flex-wrap justify-center">
         <h3 class="mr-[48px] font-mulish font-bold text-[20px] leading-[20px] text-extra-two">Volg ons op onze socials</h3>
         
@@ -1065,55 +1065,55 @@
     </div>
   </section>
 
-  <footer id="footer">
-    <section class="footer-container mx-auto">
-      <div class="row flex flex-wrap justify-around pt-10">
-        <article class="col-4">
-          <h1>eidmubarak.eu</h1>
-          <h2>
+  <footer id="footer" class="bg-[#263250]">
+    <section class="container mx-auto">
+      <div class="row flex flex-wrap mx-auto justify-around pt-[40px]">
+        <article class="max-w-[265px] mb-[30px] lg:mb-[66px] w-full text-center sm:text-left md:w-1/2 lg:w-1/4">
+          <h1 class="text-white font-nunito font-bold text-[27px] leading-[20px] uppercase mb-[33px]">eidmubarak.eu</h1>
+          <h2 class="text-[#F09591] font-mulish font-semibold leading-[27px] text-[20px] max-w-[250px] mb-[16px]">
             Jouw winkel voor 
             islamitische feestartikelen
           </h2>
-          <p>
+          <p class="font-nunito font-normal text-[13px] leading-[20px] text-white">
             A. van Leeuwenhoekweg 40<br/>
             Alphen aan de Rijn<br/>
             Nederland
           </p>
         </article>
 
-        <article class="col-4">
-          <h3>Uw account</h3>
-          <ul class="footer-links">
-            <li><a href="" class="footer-link">Persoonlijke informatie</a></li>
-            <li><a href="" class="footer-link">Nog een ding</a></li>
-            <li><a href="" class="footer-link">Wat je maar wil</a></li>
+        <article class="max-w-[265px] mb-[30px] lg:mb-[66px] w-full text-center sm:text-left md:w-1/2 lg:w-1/4">
+          <h3 class="font-mulish font-bold text-[20px] leading-[20px] text-white">Uw account</h3>
+          <ul class="mt-[8px]">
+            <li><a href="" class="font-inter font-normal text-[13px] leading-[30px] text-white">Persoonlijke informatie</a></li>
+            <li><a href="" class="font-inter font-normal text-[13px] leading-[30px] text-white">Nog een ding</a></li>
+            <li><a href="" class="font-inter font-normal text-[13px] leading-[30px] text-white">Wat je maar wil</a></li>
           </ul>
         </article>
 
-        <article class="col-4">
-          <h3>Ons bedrijf</h3>
-          <ul class="footer-links">
-            <li><a href="" class="footer-link">Algemene voorwaarden</a></li>
-            <li><a href="" class="footer-link">Nog een ding</a></li>
-            <li><a href="" class="footer-link">Wat je maar wil</a></li>
+        <article class="max-w-[265px] mb-[30px] lg:mb-[66px] w-full text-center sm:text-left md:w-1/2 lg:w-1/4">
+          <h3 class="font-mulish font-bold text-[20px] leading-[20px] text-white">Ons bedrijf</h3>
+          <ul class="mt-[8px]">
+            <li><a href="" class="font-inter font-normal text-[13px] leading-[30px] text-white">Algemene voorwaarden</a></li>
+            <li><a href="" class="font-inter font-normal text-[13px] leading-[30px] text-white">Nog een ding</a></li>
+            <li><a href="" class="font-inter font-normal text-[13px] leading-[30px] text-white">Wat je maar wil</a></li>
           </ul>
         </article>
 
-        <article class="col-4">
-          <h3>Nieuwsbrief</h3>
-          <ul class="footer-links">
-            <li><a href="" class="footer-link">Ding 1</a></li>
-            <li><a href="" class="footer-link">Nog een ding</a></li>
-            <li><a href="" class="footer-link">Wat je maar wil</a></li>
+        <article class="max-w-[265px] mb-[30px] lg:mb-[66px] w-full text-center sm:text-left md:w-1/2 lg:w-1/4">
+          <h3 class="font-mulish font-bold text-[20px] leading-[20px] text-white">Nieuwsbrief</h3>
+          <ul class="mt-[8px]">
+            <li><a href="" class="font-inter font-normal text-[13px] leading-[30px] text-white">Ding 1</a></li>
+            <li><a href="" class="font-inter font-normal text-[13px] leading-[30px] text-white">Nog een ding</a></li>
+            <li><a href="" class="font-inter font-normal text-[13px] leading-[30px] text-white">Wat je maar wil</a></li>
           </ul>
         </article>
       </div>
 
       <div class="row flex pb-[136px]">
-        <article class="col-12" id="newsletter-article">
-          <form id="newsletter" action="" class="relative">
-            <input type="text" placeholder="E-mailadres">
-            <button type="submit">Aanmelden</button>
+        <article class="flex mx-auto lg:mr-[0px]">
+          <form id="newsletter" action="" class="relative w-[293px]">
+            <input type="text" class="w-[293px] h-[42px] py-[10px] pr-[157px] pl-[12px]" placeholder="E-mailadres">
+            <button type="submit" class="absolute right-[-2px] w-[146px] h-[42px] bg-[#5BBEDD] rounded-r-[3px] text-white font-mulish font-bold leading-[20px] text-[20px]">Aanmelden</button>
           </form>
         </article>
       </div>
